--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "opencpn-libs"]
 	path = opencpn-libs
 	url = https://github.com/leamas/opencpn-libs.git
+[submodule "RadarBridge"]
+	path = RadarBridge
+	url = git@github.com:bensasl2/radar-bridge.git
