--- a/.gitmodules
+++ b/.gitmodules
@@ -2,6 +2,6 @@
 	path = opencpn-libs
 	url = https://github.com/OpenCPN/opencpn-libs.git
 	branch = main
-[submodule "radar-bridge"]
-	path = radar-bridge
-	url = https://github.com/deeprey-marine/radar-bridge.git
+[submodule "deeprey-api"]
+	path = deeprey-api
+	url = https://github.com/deeprey-marine/deeprey-api.git
